first commit for mountaineering website

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,227 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css?family=Oxygen&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Oxygen", sans-serif;
+  /* border: 1px solid green; */
+}
+.bg{
+  width: 100%;
+  height:105vh;
+  position: absolute;
+  top:0;
+  left:0;
+  
+  background: url('./assets/combinedbg.png');
+  z-index:-20000;
+  background-attachment: fixed;
+  
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+header{
+  width:100%;
+  height:10vh;
+  display:flex;
+  justify-content: space-around;
+}
+.logo{
+  margin:0 10%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.logo img{
+  margin:2% 0;
+  width: 90%;
+  height: 80% ;
+  opacity:0.9;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+header ul{
+  display:flex;
+  width:80%;
+  margin:0 20%;
+  /* justify-content: space-evenly; */
+  list-style: none;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header ul li{
+  margin:4% 6%;
+  width:18vw;
+  font-size: 12px;
+  letter-spacing: 2px;
+ 
+}
+header ul li a{
+  color:rgba(255,255,255,0.6);
+  width:100%;
+  padding: 10%;
+  text-decoration: none;
+  font-weight: 500;
+  
+}
+header ul li a:hover {
+  color:#ffffff;
+  transition: color .5s 0s ease-in;
+}
+/* header done then move to the article with the vector diagram and arrange the text */
+.svgdiagram{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
+  width:100%;
+  height:40vh;
+}
+.svgdiagram div:first-child{
+  width:50%;
+  height:70%;
+  margin:-1% 18%;
+}
+.svgdiagram div:first-child .svg{
+  width:130%;
+  
+}
+.svgdiagram div:nth-child(2){
+  position: relative;
+  top:60%;
+  left:-18%;
+  width:50%
+}
+.svgdiagram div:nth-child(2) h1{
+  font-size: 48px;
+  font-weight: 800;
+  color:#6CC8FF;
+  letter-spacing: 6px;
+}
+.svgdiagram div:nth-child(2) span{
+  color:#ffffff;
+}
+.svgdiagram div:nth-child(2) p{
+  color:rgba(255,255,255,0.6);
+  text-align: center;
+  font-size: 24px;
+  margin: 5% -20%;
+  width:130%;
+  font-weight:lighter;
+}
+.svgdiagram div:nth-child(2) p span{
+  font-weight: 500;
+  color:rgba(255,255,255,0.7);
+
+}
+.svgdiagram div:nth-child(2) input{
+  width:30%;
+  height:8vh;
+  letter-spacing: 2px;
+  padding:5px;
+  border-radius: 10px;
+  font-size: 14px;
+  background: #252020;
+  color:#ffffffbb;
+  /* font-weight: bold; */
+  border: none;
+  margin:0 30%;
+}
+/* now to the mainpage */
+main{
+  max-width:100% ;
+  width:100%;
+  height:200vh;
+  margin-top:15% ;
+  position: relative;
+  z-index:  -130;
+}
+main div:first-child{
+  width:100% ;
+  height:100%;
+  position: relative;
+  margin:40% auto;
+  background: #ffffff;
+  z-index:  -120;
+}
+main div:first-child img:first-child{
+  width: 100%;
+  margin-top: -45% ;
 }
 
-.App-link {
-  color: #61dafb;
+main div:nth-child(2) img:first-child{
+  width: 100%;
+   margin-top: -45% ;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* main div:nth-child(2) .secondimg{
+  position: relative;
+  top:-15.9vh;
+  left:82.4%;
+  
+} */
+main div:nth-child(2) h2,main div:nth-child(2) p{
+  margin:0 11%;
+  letter-spacing: 1px;
+  line-height: 30px;
+  position: absolute;
+  top:-220%;
+  left:15%;
+  width:50%;
+  /* color:#ffffff13 */
+}
+main div:nth-child(2) h2{
+  margin-top:-5%;
+  /* color:#6CC8FF; */
+}
+main div:nth-child(2){
+  width:100% ;
+  /* height:%; */
+  position: relative;
+  margin:-121% auto;
+  background: #ffffff;
+  z-index:  -110;
+}
+/* new svg css */
+.newsvg1{
+  position: absolute;
+  top:25%;
+  left:42%;
+}
+.newsvg2{
+  position: absolute;
+  top:35%;
+  left:14.2%;
+}
+.newsvg3{
+  position: absolute;
+  top:48%;
+  left:0%;
+}
+main section .svgnewimg{
+ position: absolute;
+ top:32%;
+ left:8.9%;
+ width:80%;
+ 
+}
+.svgimg{
+  width:35vw;
+  height:50vh;
+  margin-left:5%;
+  filter:sepia(10%);
+}
+.imgtitle{
+  display: flex;
+  position: absolute;
+  top:52%;
+  left: 9%;
+}
+.imgtitle p{
+
+  width:41vw;
+  background: rgba(0,0,0,0.7);
+  height:10vh;
+  margin-left:5%;
+  color:white
+}
+.imgtitle p:first-child{
+  width:38.95vw;
+}
+.imgtitle p:nth-child(2){
+  width:39vw;
+  margin-right: 50px;
+  
 }
